изменила размеры для реквизитов

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="logo"></div>
-        <p class="info">2A, Rue Albert Borschette, L-1246 LUXEMBOURG
+        <p class="logo-address">2A, Rue Albert Borschette, L-1246 LUXEMBOURG
         </p>
     </header>
     <section >
@@ -87,19 +87,20 @@
     <div class="bank">
         <div class="bank-details">
             <p class="detalis">Bank details for payments in EUR:</p>
-             Receiving Bank BANQUE INTERNATIONALE A LUXEMBOURG SA SWIFT: BILLLULL Beneficiary Account IBAN: LU430023210073011800   
+             <p class="bold">Receiving Bank</p> BANQUE INTERNATIONALE A LUXEMBOURG SA<br> <span class="bold">SWIFT:</span> BILLLULL Beneficiary Account  <br> <span class="bold">IBAN:</span> LU430023210073011800   
         </div>
         <div class="bank-details">
             <p class="detalis">Bank details for payments in USD:</p>
-             Receiving Bank BANQUE INTERNATIONALE A LUXEMBOURG SA SWIFT: BILLLULL Beneficiary Account IBAN: LU120023210073011000
+            <p class="bold">Receiving Bank</p> 
+            BANQUE INTERNATIONALE A LUXEMBOURG SA <br><span class="bold">SWIFT:</span> BILLLULL Beneficiary Account  <br> <span class="bold">IBAN:</span> LU120023210073011000
         </div>
         <div class="bank-details">
             <p class="detalis">Bank details for payments in RUB:</p>
-             Receiving Bank BANQUE INTERNATIONALE A LUXEMBOURG SA SWIFT: BILLLULL Beneficiary Account IBAN: LU580022210073017400 
+             <p class="bold">Receiving Bank</p> BANQUE INTERNATIONALE A LUXEMBOURG SA <br> <span class="bold">SWIFT:</span> BILLLULL Beneficiary Account <br> <span class="bold">IBAN:</span> LU580022210073017400 
         </div>
-    </div>
-        <div class="paypal">
-            Information for PayPal payments: PAYPAL: INVOICE@GCORE.LU 
+        <div class="bank-details">
+            <p class="detalis">Information for PayPal payments:</p> PAYPAL: INVOICE@GCORE.LU 
+        </div>
         </div>
     </section>
     <footer class="footer">
