--- a/index.html
+++ b/index.html
@@ -104,8 +104,14 @@
         </div>
     </section>
     <footer class="footer">
-
+        <div class="footer-line">
+            <span class="footer-title">G-Core Labs S. A.</span>
+        </div>
+        <div class="footer-address">
+        <p>REGISTRATION NUMBER: B184832 VAT NUMBER: LU26701717 </p>
+        <p>REGISTERED ADDRESS: 2A, Rue Albert Borschette, L-1246 LUXEMBOURG</p>
+    </div>
     </footer>
-   
+    
 </body>
 </html>
